--- a/CMPE_180B_ISS_Helper/application.properties
+++ b/CMPE_180B_ISS_Helper/application.properties
@@ -2,3 +2,15 @@ spring.datasource.url=jdbc:sqlserver://localhost
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=ISAdmin
 spring.datasource.password=ISAdmin
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
