--- a/CMPE_180B_ISS_Helper/build.gradle
+++ b/CMPE_180B_ISS_Helper/build.gradle
@@ -54,7 +54,9 @@ dependencies {
 	
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile('com.microsoft.sqlserver:mssql-jdbc')
-	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
+compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.1.3.RELEASE'
+	compile('org.springframework.boot:spring-boot-starter-mail')
 	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto
 compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.1.2.RELEASE'
 	
