Adding Log Functionality

--- a/CMPE_180B_ISS_Helper/application.properties
+++ b/CMPE_180B_ISS_Helper/application.properties
@@ -14,3 +14,18 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.output.ansi.enabled=always
+
+logging.level.org.springframework=OFF
+logging.level.root=OFF
+logging.level.com.isshelper=DEBUG
+
+ 
+#output to a temp_folder/file
+logging.file=C:/Users/kaust/OneDrive/Desktop/180B/CMPE_180B_ISS_Helper/IssHepler.log
+ 
+
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
