Updated Email and Other Functionality

--- a/CMPE_180B_ISS_Helper/application.properties
+++ b/CMPE_180B_ISS_Helper/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=ISAdmin
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=intlstudenthelper@gmail.com
+spring.mail.password=!Qwerty63!
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
@@ -15,7 +15,8 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.output.ansi.enabled=always
+spring.main.banner-mode=off 
+spring.output.ansi.enabled=ALWAYS
 
 logging.level.org.springframework=OFF
 logging.level.root=OFF
@@ -23,7 +24,7 @@ logging.level.com.isshelper=DEBUG
 
  
 #output to a temp_folder/file
-logging.file=C:/Users/kaust/OneDrive/Desktop/180B/CMPE_180B_ISS_Helper/IssHepler.log
+logging.file=C:/Users/kaust/OneDrive/Desktop/180B/CMPE_180B_ISS_Helper/IssHepler.txt
  
 
 logging.pattern.file=%d %p %c{1.} [%t] %m%n
