--- a/CMPE_180B_ISS_Helper/application.properties
+++ b/CMPE_180B_ISS_Helper/application.properties
@@ -24,7 +24,7 @@ logging.level.com.isshelper=DEBUG
 
  
 #output to a temp_folder/file
-logging.file=C:/Users/kaust/OneDrive/Desktop/180B/CMPE_180B_ISS_Helper/IssHepler.txt
+logging.file=C:/Users/kaust/OneDrive/Desktop/180B/CMPE_180B_ISS_Helper/IssHepler.log
  
 
 logging.pattern.file=%d %p %c{1.} [%t] %m%n
